# Scenic

./: .gitattributes  .gitignore  RACING_DOMAIN_SUMMARY.md  README.md  check_network.py  debug_junction.py  fixed_fellow2_left_by_2.csv  gps_dspace_table.csv  pyproject.toml  r_scenic_runs_fellow2_left_by_2.csv  result_data_comparison.csv  run.log.art_behavior_failure_2026-04-25  scenic_fellows_scenarios.csv  scenic_fellows_scenarios1.csv  scenic_fellows_scenarios_final_left_2.csv  scenic_runs_fellow2_left_by_2.csv  scenic_runs_fellow2_left_by_3.csv  st_test_final_ahead_2.csv  st_test_final_behind_2.csv  st_test_final_left_2.csv  st_test_left_4.csv  st_test_right_2.csv  st_test_right_4.csv  temp_log2
AI_DOCUMENTS/: CARLA_IMPLEMENTATION_ANALYSIS.md  CONTROLDESK_JOYSTICK_INTEGRATION.md  CONTROL_IMPLEMENTATION_SUMMARY.md  ControlDesk.md  DECISION_TREE_IMPLEMENTATION_SUMMARY.md  DOMAIN_ARCHITECTURE_SUMMARY.md  DRIVING_VS_RACING_DOMAIN_ARCHITECTURE.md  DSPACEACTOR_REFACTORING.md  DSPACE_COMPREHENSIVE_GUIDE.md  DSPACE_CONTROL_INTERFACES.md  DSPACE_COORDINATE_TRANSFORMATION.md  DSPACE_SIMULATOR_STRUCTURE.md  GEAR_AND_CLUTCH_IMPLEMENTATION.md  RACING_ARCHITECTURE_FIX_SUMMARY.md  RACING_DOMAIN_LIBRARY_REFERENCE.md  RACING_DOMAIN_PATTERNS.md  README.md  README_GEAR_CONTROL.md  SCENIC_DOMAIN_ARCHITECTURE_COMPLETE_GUIDE.md  SIMULATION_LOOP_FLOW.md  STEP_AND_GETPROPERTIES_FIX.md  VEHICLE_CONTROL_IMPLEMENTATION.md  webots_falsification_guide.md
create_new_ttl/: RACING_LINE_RESOURCES.md  README.md  TTL_ANALYSIS.md  analyze_ttl_quality.py  build_main_track_xodr.py  close_ttl_loop.py  combine_and_compare_ttl.py  compare_and_zoom.py  compare_racing_lines.py  find_xodr_for_st_coordinates.py  generate_pitlane_ttl.py  generate_racing_line.py  interactive_map_visualizer.py  st_to_xodr_results.txt  temp.txt  temp_pitlane_begin_ttl.csv  temp_pitlane_end_ttl.csv  ttl_pitlane_corkscrew_loop.csv  ttl_pitlane_main_pitlane.csv  ttl_racing_line_xodr.csv  verify_ttl_against_xodr.py  visualize_combined_ttl.py  visualize_ttl_boundaries.py  visualize_ttl_wrap.py
debug_calibrate_cord/: COORDINATE_SYSTEM_ALIGNMENT.md  README.md  calibrate_scenic_to_controldesk.py  calibration_analysis.json  calibration_data.json  calibration_summary.txt  debug_waypoint_issue.py  evaluate_ttl_coordinates.py  (+6 more)
src/scenic/simulators/dspace/cosim/pythonbinding/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
src/scenic/simulators/dspace/cosim/pythonbinding/scripts/: cpp_client_bridge_demo.py  time_trigger_demo.py
src/scenic/simulators/dspace/cosim/pythonbinding/src/: veos_cosim_binding.cpp
src/scenic/simulators/dspace/cosim/pythonbinding/veos_cosim/: __init__.py
src/scenic/simulators/dspace/cosim/veos_cosim_py_portmapper_fix/: README.md  build_bridge.bat  print_time_callbacks.py  pyproject.toml
src/scenic/simulators/dspace/cosim/veos_cosim_py_portmapper_fix/bridge/: CMakeLists.txt  veos_cosim_bridge.cpp
src/scenic/simulators/dspace/cosim/veos_cosim_py_portmapper_fix/src/veos_cosim_py/: __init__.py  backends.py  client.py  types.py
(+1092 files in other folders)
