[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veos-cosim-py"
version = "0.3.0"
description = "Python wrapper for VEOS CoSim without modifying the vendor folder"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
